policies/cilium/allow-gateway-team-b.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny
  namespace: team-b-demo
spec:
  endpointSelector: {}
  ingress:
    - {}
  egress:
    - {}
