policies/cilium/clusterwide-allow-dns.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-dns-egress-team-namespaces
spec:
  endpointSelector:
    matchExpressions:
      - key: io.cilium.k8s.namespace.labels.team
        operator: Exists
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
