policies/cilium/clusterwide-allow-gateway.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-gateway-ingress-team-namespaces
spec:
  endpointSelector:
  matchExpressions:
    - key: io.cilium.k8s.namespace.labels.team
      operator: Exists
    - key: io.cilium.k8s.namespace.labels.team
      operator: NotIn
      values:
        - platform
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
