policies/cilium/clusterwide-allow-otel.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-otel-egress-team-namespaces
spec:
  endpointSelector:
    matchExpressions:
      - key: io.cilium.k8s.namespace.labels.team
        operator: Exists
      - key: io.cilium.k8s.namespace.labels.team
        operator: NotIn
        values:
          - platform
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: platform-observability
      toPorts:
        - ports:
            - port: "4317"
              protocol: TCP
