policies/cilium/clusterwide-default-deny.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: default-deny-team-namespaces
spec:
  endpointSelector:
    matchExpressions:
      - key: io.cilium.k8s.namespace.labels.team
        operator: Exists
      - key: io.cilium.k8s.namespace.labels.team
        operator: NotIn
        values:
          - platform
  ingress:
    - {}
  egress:
    - {}
