policies/cilium/default-deny-team-a.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny
  namespace: team-a-demo
spec:
  endpointSelector: {}
  ingress:
    - {}
  egress:
    - {}
